# work-graph

./: .gitignore  LICENSE  README.md
apps/backend/: alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  scripts.sh
apps/backend/src/: exception_handler.py  main.py
apps/backend/src/bootstrap/: routers.py
apps/backend/src/config/: database.py  settings.py
apps/backend/src/modules/identity/api/: __init__.py  auth_router.py  profile_router.py  user_router.py
apps/backend/src/modules/identity/domain/: exceptions.py
apps/backend/src/modules/identity/infrastructure/: alembic.ini  models.py
apps/backend/src/modules/knowledge/api/: __init__.py  document_router.py  serializers.py
apps/backend/src/modules/organization/api/: __init__.py  org_membership_router.py  org_router.py
apps/backend/src/modules/organization/application/: facade.py
apps/backend/src/modules/organization/domain/: exceptions.py
apps/backend/src/modules/organization/infrastructure/: alembic.ini
apps/backend/src/modules/project/api/: __init__.py  project_router.py
apps/backend/src/modules/project/infrastructure/: alembic.ini
apps/backend/src/modules/shared/domain/: entity.py  entity_v1.py
apps/backend/src/modules/task/api/: __init__.py  task_router.py
apps/backend/src/modules/task/domain/: exceptions.py
apps/backend/src/shared/config/: database.py  settings.py
apps/backend/tests/: conftest.py
apps/backend/tests/modules/identity/: test_fetch_profile.py
apps/backend/tests/modules/org/: conftest.py
apps/backend/tests/modules/project/: conftest.py
(+313 files in other folders)
