[project]
dependencies = [
  "alembic>=1.18.4",
  "asyncpg>=0.31.0",
  "fastapi>=0.136.3",
  "psycopg>=3.3.4",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "sqlalchemy>=2.0.50",
  "uvicorn>=0.48.0",
]
description = "Add your description here"
name = "backend"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[dependency-groups]
dev = [
  "mypy>=2.1.0",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.4.0",
  "ruff>=0.15.15",
]
